# CodeBeautyTutorials

1- OOP/: CMakeLists.txt  IntroductionToOOP.cpp
2- Pointers & Arrays/: CMakeLists.txt
