cmake_minimum_required(VERSION 3.21)
project(2__Pointers___Arrays)

set(CMAKE_CXX_STANDARD 14)

add_executable(2__Pointers___Arrays
        01-IntroductionToPointers.cpp
        02-VoidPointers.cpp
        03-PointersAndArrays.cpp
        04-ReturningMultipleValuesFromAFunctionUsingPointers.cpp
        05-MultidimensionalDynamicArraysTwoDimensionalArrays.cpp)
